included copy right

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,3 +3,4 @@
 
 <p>This is an about page which talks a bit about this project</p>
 <p>The website is a word count website that takes in text and counts the number of words in a text and also shows the frequency of the text.</p>
+<p>&copy 2018</p>
